--- a/auth/auth-web/pom.xml
+++ b/auth/auth-web/pom.xml
@@ -150,5 +150,14 @@
         -->
         <!-- == End Coding Support == -->
 
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.2-1004-jdbc4</version>
+        </dependency>
     </dependencies>
 </project>
