add Resource-Owner authentication view.

--- a/resource/resource-web/pom.xml
+++ b/resource/resource-web/pom.xml
@@ -150,5 +150,9 @@
         -->
         <!-- == End Coding Support == -->
 
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+        </dependency>
     </dependencies>
 </project>
