--- a/resource/resource-web/src/main/webapp/WEB-INF/web.xml
+++ b/resource/resource-web/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
         <!-- Root ApplicationContext -->
         <param-value>
             classpath*:META-INF/spring/applicationContext.xml
+            classpath*:META-INF/spring/oauth2-resource.xml <!-- (1) -->
             classpath*:META-INF/spring/spring-security.xml
         </param-value>
     </context-param>
