--- a/client/client-web/src/main/webapp/WEB-INF/web.xml
+++ b/client/client-web/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
         <!-- Root ApplicationContext -->
         <param-value>
             classpath*:META-INF/spring/applicationContext.xml
+            classpath*:META-INF/spring/oauth2-client.xml
             classpath*:META-INF/spring/spring-security.xml
         </param-value>
     </context-param>
@@ -71,6 +72,15 @@
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>oauth2ClientContextFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> <!-- (2) -->
+    </filter>
+    <filter-mapping>
+        <filter-name>oauth2ClientContextFilter</filter-name>
+        <url-pattern>/*</url-pattern> <!-- (3) -->
     </filter-mapping>
 
     <servlet>
